Downgraded java version to 1.8 in java services as it was giving more troubles then it helps. Neither Kotlin or Spring Cloud work with it correctly. Added new service Changed travis Changed readme Adjust Mail test so it doesn't use 1.9 method