@@ -2,8 +2,3 @@
 Java and Kotlin Microservices, Spring Cloud, Eureka
 
 Config files are located at https://github.com/lukaszrys/savemaker-config
-microservices with Java 1.9 has to be run with:
-
-`--add-modules java.xml.bind`
-
-because the Java 9 went to module mode
